# Multi-Source-AI-Learning-Assistant-

./: .gitignore  README.md  assignment.md
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  railway.json  requirements.txt  schema.sql
backend/processors/: chunker.py  pdf.py  pptx.py  webpage.py  youtube.py
backend/rag/: chat.py  embeddings.py  gemini.py  vectorstore.py
backend/routes/: chat.py  quiz.py  sessions.py  sources.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  MessageBubble.tsx  QuizMode.tsx  SourceBadge.tsx  SourceUpload.tsx
frontend/lib/: api.ts
