[project]
name = "knowledgebot-backend"
version = "0.1.0"
description = "RAG-powered AI chatbot backend — answers questions from uploaded documents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.0",
    "httpx==0.27.0",
    "supabase==2.9.1",
    "PyPDF2==3.0.1",
    "beautifulsoup4==4.12.3",
    "tiktoken>=0.7.0",
    "sse-starlette==2.1.0",
    "python-pptx==1.0.2",
    "youtube-transcript-api==0.6.2",
]

[project.scripts]
dev = "uvicorn main:app --reload --port 8000"
